[app] アノテーションによる Doctrine マッピング定義を有効にした。

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -56,6 +56,11 @@ doctrine:
     orm:
         auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
+        mappings:
+            ExampleUserRegistrationBundle:
+                type: annotation
+                dir: Domain/Data
+                prefix: Example\UserRegistrationBundle\Domain\Data
 
 # Swiftmailer Configuration
 swiftmailer:
