[Git] .gitignore のエントリの曖昧さを排除するために適宜スラッシュを挿入した。

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-web/bundles/
-app/bootstrap.php.cache
-build/
-vendor
-composer.phar
+/web/bundles/
+/app/bootstrap.php.cache
+/build/
+/vendor/
+/composer.phar
