--- a/src/Example/UserRegistrationBundle/Resources/config/services.yml
+++ b/src/Example/UserRegistrationBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
-# Copyright (c) 2012 KUBO Atsuhiro <kubo@iteman.jp>,
+# Copyright (c) 2012-2013 KUBO Atsuhiro <kubo@iteman.jp>,
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -23,8 +23,38 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 parameters:
+  example_user_registration.swift_message.class: "Swift_Message"
+  example_user_registration.user.class: "Example\\UserRegistrationBundle\\Domain\\Data\\User"
+  example_user_registration.user_registration_service.class: "Example\\UserRegistrationBundle\\Domain\\Service\\UserRegistrationService"
+  example_user_registration.user_transfer.class: "Example\\UserRegistrationBundle\\Domain\\Data\\Transfer\\UserTransfer"
 
 services:
+  example_user_registration.entity_manager:
+    synthetic: true
+
+  example_user_registration.password_encoder:
+    class: "DUMMY"
+    factory_service: security.encoder_factory
+    factory_method: getEncoder
+    arguments: [ "%example_user_registration.user.class%" ]
+
+  example_user_registration.swift_message:
+    class: "%example_user_registration.swift_message.class%"
+
+  example_user_registration.user_registration_service:
+    class: "%example_user_registration.user_registration_service.class%"
+    arguments:
+      - "@example_user_registration.entity_manager"
+      - "@example_user_registration.password_encoder"
+      - "@security.secure_random"
+      - "@example_user_registration.user_transfer"
+
+  example_user_registration.user_transfer:
+    class: "%example_user_registration.user_transfer.class%"
+    arguments:
+      - "@mailer"
+      - "@example_user_registration.swift_message"
+      - "@twig"
 
 # Local Variables:
 # mode: conf
