--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -25,5 +25,7 @@ monolog:
 assetic:
     use_controller: true
 
-#swiftmailer:
-#    delivery_address: me@example.com
+swiftmailer:
+    transport: gmail
+    username: %gmail_user%
+    password: %gmail_password%
