--- a/app/config/parameters.yml.example
+++ b/app/config/parameters.yml.example
@@ -10,6 +10,8 @@ parameters:
     mailer_host:       127.0.0.1
     mailer_user:       ~
     mailer_password:   ~
+    gmail_user:        your_gmail_username
+    gmail_password:    your_gmail_password
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
