--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /web/bundles/
 /app/bootstrap.php.cache
 /app/cache/*
+!/app/cache/.gitkeep
 /app/logs/*
+!/app/logs/.gitkeep
 /build/
 /vendor/
 /bin/
