[app] ディレクトリ app/cache, app/logs を Git の管理対象に追加した。

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 /web/bundles/
 /app/bootstrap.php.cache
 /app/cache/*
+!/app/cache/.gitkeep
 /app/config/parameters.yml
 /app/logs/*
+!/app/logs/.gitkeep
 /build/
 /vendor/
 /bin/
