--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "jms/security-extra-bundle": "1.4.*",
         "jms/di-extra-bundle": "1.3.*"
     },
+    "require-dev": {
+        "piece/stagehand-componentfactory": ">=1.1.0@dev"
+    },
     "scripts": {
         "post-install-cmd": [
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
