[app] User オブジェクトのためのパスワードエンコーダーの設定を追加した。

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,6 +5,10 @@ jms_security_extra:
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        Example\UserRegistrationBundle\Domain\Data\User:
+            algorithm: sha1
+            iterations: 5000
+            encode_as_base64: true
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
