--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0"
     },
+    "require-dev": {
+        "piece/stagehand-componentfactory": ">=1.1.0@dev"
+    },
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
