エンティティ、リポジトリのディレクトリ構造を簡潔にした
Symfonyアプリケーションの一般的な構成に変更した。

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -59,8 +59,8 @@ doctrine:
         mappings:
             ExampleUserRegistrationBundle:
                 type: annotation
-                dir: Domain/Data
-                prefix: Example\UserRegistrationBundle\Domain\Data
+                dir: Entity
+                prefix: Example\UserRegistrationBundle\Entity
 
 # Swiftmailer Configuration
 swiftmailer:
