--- a/src/Example/UserRegistrationBundle/Resources/config/services.yml
+++ b/src/Example/UserRegistrationBundle/Resources/config/services.yml
@@ -24,9 +24,9 @@
 
 parameters:
   example_user_registration.swift_message.class: "Swift_Message"
-  example_user_registration.user.class: "Example\\UserRegistrationBundle\\Domain\\Data\\User"
+  example_user_registration.user.class: "Example\\UserRegistrationBundle\\Entity\\User"
   example_user_registration.user_registration_service.class: "Example\\UserRegistrationBundle\\Domain\\Service\\UserRegistrationService"
-  example_user_registration.user_transfer.class: "Example\\UserRegistrationBundle\\Domain\\Data\\Transfer\\UserTransfer"
+  example_user_registration.user_transfer.class: "Example\\UserRegistrationBundle\\Transfer\\UserTransfer"
 
 services:
   example_user_registration.entity_manager:
