--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "incenteev/composer-parameter-handler": "~2.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "~4.0",
         "sensio/generator-bundle": "~2.3"
     },
     "scripts": {
