--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
+        "piece/stagehand-testrunner": ">=4.0.1",
         "sensio/generator-bundle": "~2.3"
     },
     "scripts": {
