--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "phpmentors/domain-kata": "1.2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
