[app] dev 環境の Swift Mailer で Gmail を使うように設定を変更した。

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -44,5 +44,7 @@ monolog:
 assetic:
     use_controller: true
 
-#swiftmailer:
-#    delivery_address: me@example.com
+swiftmailer:
+    transport: gmail
+    username: %gmail_user%
+    password: %gmail_password%
