バンドル ExampleUserRegistrationBundle を追加した。

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,4 @@
-app:
-    resource: @AppBundle/Controller/
+example_user_registration:
+    resource: "@ExampleUserRegistrationBundle/Controller/"
     type:     annotation
+    prefix:   /
