--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        "phpmentors/domain-kata": "1.2.*"
+        "phpmentors/domain-kata": "1.2.*",
+        "phpmentors/pageflower-bundle": "1.0.*"
     },
     "require-dev": {
         "phake/phake": "~1.0",
